[gd_scene load_steps=17 format=2]

[ext_resource path="res://Resource/Fonts/TextFontHeader.tres" type="DynamicFont" id=1]
[ext_resource path="res://Resource/Fonts/ButtonStyle.tres" type="Theme" id=2]
[ext_resource path="res://Resource/Fonts/TextFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resource/Fonts/Fifaks10Dev1.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scene/Registration.gd" type="Script" id=5]
[ext_resource path="res://Scene/Loader.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0

[sub_resource type="StyleBoxFlat" id=20]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 1.0

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.737255, 0.737255, 0.737255, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 0.45098 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.945098, 0.945098, 0.945098, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.431373, 0.431373, 0.431373, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxLine" id=26]
color = Color( 1, 1, 1, 0 )
thickness = 10
vertical = true

[sub_resource type="DynamicFont" id=27]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=18]
default_font = SubResource( 27 )
LineEdit/colors/clear_button_color = Color( 0, 0, 0, 1 )
LineEdit/colors/cursor_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.258824, 0.258824, 0.258824, 0.501961 )
LineEdit/fonts/font = ExtResource( 3 )
LineEdit/styles/normal = SubResource( 19 )
LineEdit/styles/read_only = SubResource( 20 )
OptionButton/colors/font_color = Color( 0, 0, 0, 1 )
OptionButton/styles/normal = SubResource( 21 )
TextEdit/colors/font_color = Color( 0, 0, 0, 1 )
TextEdit/colors/font_color_readonly = Color( 0.258824, 0.258824, 0.258824, 0.501961 )
TextEdit/styles/normal = SubResource( 22 )
TextEdit/styles/read_only = SubResource( 20 )
VScrollBar/styles/grabber = SubResource( 23 )
VScrollBar/styles/grabber_highlight = SubResource( 24 )
VScrollBar/styles/grabber_pressed = SubResource( 25 )
VScrollBar/styles/scroll = SubResource( 26 )

[node name="Registration" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -267.0
margin_top = 24.0
margin_right = 267.0
margin_bottom = 114.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Grise

Регистрация"
align = 1
valign = 1

[node name="NameLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = -167.0
margin_right = -32.9995
margin_bottom = -149.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Имя:"

[node name="Name" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = -149.0
margin_right = -32.9995
margin_bottom = -120.709
theme = SubResource( 18 )
max_length = 40
placeholder_text = "Введите свое имя"

[node name="SurnameLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = -110.0
margin_right = -32.9995
margin_bottom = -92.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Фамилия:"

[node name="Surname" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = -90.0
margin_right = -32.9995
margin_bottom = -61.7094
theme = SubResource( 18 )
max_length = 40
secret_character = "/"
placeholder_text = "Введите свою фамилию"

[node name="PosLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = -49.0
margin_right = -32.9995
margin_bottom = -31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Должность:"

[node name="Position" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = -29.0
margin_right = -32.9995
margin_bottom = -0.709351
theme = SubResource( 18 )
max_length = 40
secret_character = "/"
placeholder_text = "Введите свою должность"

[node name="BranchLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = 9.0
margin_right = -32.9995
margin_bottom = 27.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Отдел:"

[node name="BranchLine" type="OptionButton" parent="."]
anchor_left = 0.389648
anchor_top = 0.573333
anchor_right = 0.608398
anchor_bottom = 0.62
margin_left = -144.0
margin_top = -15.0
margin_right = -144.0
margin_bottom = -15.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LoginLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -167.0
margin_right = 259.0
margin_bottom = -149.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Логин:"

[node name="Login" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -147.0
margin_right = 259.0
margin_bottom = -118.709
theme = SubResource( 18 )
max_length = 40
secret_character = "/"
placeholder_text = "Введите свой логин"

[node name="PasswordLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -110.0
margin_right = 259.0
margin_bottom = -92.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Пароль:"

[node name="Password" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -90.0
margin_right = 259.0
margin_bottom = -61.709
theme = SubResource( 18 )
max_length = 40
secret = true
secret_character = "/"
placeholder_text = "Введите свой пароль"

[node name="ShowPasswdMain" type="Button" parent="Password"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 159.0
margin_top = -14.1453
margin_right = 187.0
margin_bottom = 15.8547
rect_rotation = 89.9999
theme = ExtResource( 2 )
toggle_mode = true
text = "(|)"

[node name="PasswordLabel2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -49.0
margin_right = 259.0
margin_bottom = -31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Подтвердите пароль:"

[node name="Password2" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -29.0
margin_right = 259.0
margin_bottom = -0.708984
theme = SubResource( 18 )
max_length = 40
secret = true
secret_character = "/"
placeholder_text = "Ещё раз"

[node name="ShowPasswdSecond" type="Button" parent="Password2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 159.0
margin_top = -14.1453
margin_right = 187.0
margin_bottom = 15.8547
rect_rotation = 89.9999
theme = ExtResource( 2 )
toggle_mode = true
text = "(|)"

[node name="AuthBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = 191.0
margin_right = 111.0
margin_bottom = 221.0
theme = ExtResource( 2 )
text = "Зарегистрироваться"

[node name="ExitBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = 229.0
margin_right = 111.0
margin_bottom = 259.0
theme = ExtResource( 2 )
text = "Назад"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPBranch" type="HTTPRequest" parent="."]
timeout = 1.0

[node name="Loader" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="Password/ShowPasswdMain" to="." method="_on_ShowPasswdMain_pressed"]
[connection signal="pressed" from="Password2/ShowPasswdSecond" to="." method="_on_ShowPasswdSecond_pressed"]
[connection signal="pressed" from="AuthBtn" to="." method="_on_AuthBtn_pressed"]
[connection signal="pressed" from="ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPBranch" to="." method="_on_HTTPBranch_request_completed"]
